<resources>
    <string name="app_name">Popular Movies</string>

    <string name="movie_poster_description">Movie Poster</string>

    <!-- Error messages-->
    <string name="error_message">Movie data not available</string>

    <string name="error_message_internet">Oops, it seems that you phone doesn\'t have Internet connection</string>

    <string name="settings">Settings</string>

    <string-array name="sort_orders">
        <item>Popular</item>
        <item>Top-rated</item>
    </string-array>

    <string name="cancel">Cancel</string>

    <string name="ok">OK</string>

    <!-- For Main Movie Activity menu options -->
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="favorites_movies">Favorites</string>
    <string name="detail_movie">Details Movie</string>

    <string name="menu_item">Order By</string>

    <!-- Content descriptions-->
    <string name="movie_title_detail">Movie Title</string>
    <string name="movie_release_label">Release Date: </string>
    <string name="movie_release_date_detail">2018/12/07</string>
    <string name="movie_synopsis">Movie Synopsis</string>
    <string name="movie_vote_label">Vote Average: </string>
    <string name="movie_vote_average_detail">69</string>

    <!-- Trailers needed strings-->
    <string name="trailer_title">Trailers</string>
    <string name="no_trailers">No trailers available</string>

    <!-- Reviews needed strings-->
    <string name="reviews_title">Reviews</string>
    <string name="no_reviews">No reviews available</string>
    <string name="author_review_label"> Author:</string>
    <string name="author_review_placeholder"> Author Review Placeholder</string>
    <string name="content_reviews">Comment excerpt. Long placeholder location that should wrap to more than 2 lines of text</string>
    <string name="next_reviews">Next</string>

    <!-- Toast message in editor when new movie has failed to be inserted  -->
    <string name="editor_insert_failed">Error with saving movie to Favorites</string>

    <!-- Toast message in editor when new movie has be inserted  -->
    <string name="editor_insert_ok">Saving movie to Favorites</string>

    <!-- Toast message when movie has failed to be deleted  -->
    <string name="editor_delete_failed">Error with deleting movie to Favorites</string>

    <!-- Toast message when movie has been deleted  -->
    <string name="editor_delete_ok">Delete movie from Favorites</string>

    <!-- Log message when movie has been added  -->
    <string name="log_insert_ok">The movie was added to Favorites successfully</string>

    <!-- Log message when movie has failed to be added  -->
    <string name="log_insert_failed">The movie couldn\'t be added as favorite</string>

    <!-- Toast message when movie has been deleted  -->
    <string name="log_delete_ok">Delete movie from Favorites</string>

    <string name="no_favorites">You have no saved favorites.</string>


</resources>
